# advent-of-code

2019/: run.ps1  test.ps1  tools.ts
2019/01/: first.ts  second.ts
2019/02/: first.ts  second.ts
2019/03/: first.ts  second.ts
2019/04/: first.ts  second.ts
2019/05/: first.ts  second.ts
2019/09/: first.ts  second.ts
2019/11/: first.ts  second.ts
2019/13/: first.ts  second.ts
2019/15/: first.ts  second.ts
2019/17/: first.ts  input  second.ts
2019/18/: first.ts
2020/: first.ps1  mod.ts  second.ps1  tools.ts
2020/01/: first.ts  second.ts
2020/02/: first.ts  second.ts
2020/03/: first.ts  second.ts
2020/04/: first.ts  second.ts
2020/05/: first.ts  second.ts
2020/06/: first.ts  second.ts
2020/07/: first.ts  second.ts
2020/08/: first.ts  second.ts
2020/09/: first.ts  second.ts
2020/10/: first.ts  second-invalid.ts  second.ts
2020/11/: first.ts  second.ts
2020/12/: first.ts
2020/13/: first.ts  second.ts
2020/14/: first.ts  second.ts
2020/15/: first.ts  second.ts
2020/16/: first.ts  second.ts
2020/17/: first.ts  second.ts
2020/18/: second.ts
2021/: .gitignore  bsconfig.json  package-lock.json  package.json
2021/src/: BigInt.res  Grid.res  Main.res  Utils.res
2022/: Cargo.toml
2022/src/: main.rs
2023/: AOC2023.opam  dune-project
2024/: .gitignore  ols.json  run.sh  run_scratch.sh
2024/01/: main.odin  part1.odin  part2.odin
2024/02/: part1.odin  part2.odin
2024/03/: main.odin  part1.odin  part2.odin
2024/04/: main.odin  part1.odin  part2.odin
2024/05/: main.odin  part1.odin  part2.odin
(+158 files in other folders)
